syntax = "proto3";

option csharp_namespace = "grpc_sample";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc SayMyName (MyNameRequest) returns (MyNameResponse);
}

message MyNameRequest{
  string myName = 1;
}

message MyNameResponse{
  string yourName = 1;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
